--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "purecss": "^1.0.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-visibility-sensor": "^3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
