--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "technical-documentation",
+  "homepage": "https://marianoheller.github.io/technical-documentation",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,5 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
